fixed overflow issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@ body {
     box-sizing: border-box;
     background-color: $white-bg;
     font-family: Inter;
+    overflow-x: hidden;
 }
 
 .dashboard {
